# KutInfo-Bead

./: Bead.docx
bead/: Bead.docx  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pendulum.data  ~$Bead.docx
bead/app/: CMakeLists.txt  Makefile  cmake_install.cmake  pendulum.data
bead/app/inc/: pendulum.hpp
bead/app/src/: pendulum.cpp
bead/gnuplot/: CMakeLists másolata.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pendulum.plt
bead/phys/: CMakeLists.txt  Makefile  cmake_install.cmake
